[gd_scene load_steps=7 format=3 uid="uid://cvwoughnrsxok"]

[ext_resource type="Script" path="res://scripts/loading_screen.gd" id="1_phadw"]
[ext_resource type="Texture2D" uid="uid://c2gdv5mjsye35" path="res://adventur of timtim/—Pngtree—brush circle creative brush effect_60205152.png" id="2_3tnua"]
[ext_resource type="Texture2D" uid="uid://twlfl8xhcgdh" path="res://adventur of timtim/Unnamrfed.png" id="3_du5gp"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hkl7f"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(17.68, 1, 1)
spread = 59.516
initial_velocity_max = 596.78
gravity = Vector3(0, 0, 0)
scale_max = 2.0
color = Color(0.839216, 0.52549, 0.254902, 1)
turbulence_enabled = true
turbulence_noise_strength = 3.65
turbulence_noise_scale = 2.235
turbulence_noise_speed_random = 0.38
turbulence_influence_max = 0.218
turbulence_initial_displacement_max = 47.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_k1q8x"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(18.305, 1, 1)
spread = 42.096
initial_velocity_max = 241.94
gravity = Vector3(0, 0, 0)
scale_min = 0.0
scale_max = 3.0
color = Color(0.788235, 0.168627, 0.0862745, 0.780392)
turbulence_initial_displacement_max = 23.5

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ee3g5"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(10.775, 1, 1)
initial_velocity_max = 677.42
gravity = Vector3(0, 0, 0)
scale_max = 4.0
color = Color(0.992157, 0.478431, 0.407843, 0.360784)
turbulence_enabled = true
turbulence_influence_min = 0.0
turbulence_influence_max = 0.071
turbulence_initial_displacement_min = -52.9
turbulence_initial_displacement_max = 32.4

[node name="loading screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 165.0
offset_top = 51.0
offset_right = 165.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.24644, 1.25115)
script = ExtResource("1_phadw")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = -64.1828
offset_top = 668.985
offset_right = 1135.82
offset_bottom = 1868.98
scale = Vector2(0.0878973, 0.0837441)
fill_mode = 4
texture_under = ExtResource("2_3tnua")
texture_progress = ExtResource("2_3tnua")
tint_under = Color(0, 0, 0, 1)

[node name="fire1" type="GPUParticles2D" parent="."]
z_index = 2
position = Vector2(1410.42, 851.217)
rotation = -1.90795
scale = Vector2(3.2147, 2.79512)
emitting = false
amount = 1000
process_material = SubResource("ParticleProcessMaterial_hkl7f")

[node name="fire2" type="GPUParticles2D" parent="."]
z_index = 1
position = Vector2(1408.81, 850.418)
rotation = -2.10995
scale = Vector2(3.04249, 2.5632)
emitting = false
amount = 1000
process_material = SubResource("ParticleProcessMaterial_k1q8x")

[node name="fire3" type="GPUParticles2D" parent="."]
position = Vector2(1423.25, 856.812)
rotation = -1.973
scale = Vector2(1.65538, 1.55937)
emitting = false
amount = 1000
process_material = SubResource("ParticleProcessMaterial_ee3g5")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(638, 381)
scale = Vector2(0.808249, 0.814682)
texture = ExtResource("3_du5gp")
